Hands-ons/bigrequest.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: bigrequest-pod
spec: 
  containers:
    - name: busybox
      image: busybox
      command: ['sh', "-c", "while true;do sleep 3600;done"]
      resources: 
        requests:
          cpu: "10000m"
          memory: "128Mi"
