Hands-ons/init.yml
apiVersion: v1
kind: Pod 
metadata:
  name: init-pod
  labels:
    app: init-pod
spec: 
  containers:
    - name: nginx
      image: nginx:latest
