Hands-ons/liveness-http.yaml
apiVersion: v1
kind: Pod 
metadata:
 name: liveness-http 
spec:
  containers:
    - name: liveness
      image: nginx
      ports:
       - containerPort: 80
      livenessProbe:
        httpGet:
          path: /  #ikinci deneme /main olunca hata mesaji oldugunu görürsün
          port: 80
        initialDelaySeconds: 10
        timeoutSeconds: 2
        periodSeconds: 5
