Hands-ons/maintenance.yaml
apiVersion: v1
kind: Pod
metadata:
    name: maintenance-pod
spec:
    containers:
    - name: busybox
      image: busybox
      command: ['sh', '-c', 'while true; do echo Success! >> /output/output.txt; sleep 5; done']
      volumeMounts:
      - name: output-vol
        mountPath: /output # bu da container içindeki klasör    
    
    volumes:
    - name: output-vol
      hostPath: # klasör worker node içerisinde oluşuyor
        path: /var/data
