Hands-ons/mypod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers: 
  - name: mynginx
    image: nginx:alpine
    ports: 
    - containerPort: 80
