Hands-ons/never-pod.yaml
apiVersion: v1
kind: Pod 
metadata: 
  name: never-pod
  labels:
    app: restart-policy
spec:
  restartPolicy: Always
  containers:
    - name: busybox
      image: busybox
      command: ['sh','-c','sleep 10']
