Hands-ons/readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-exec

spec: 
  containers:
    - name: readiness
      image: busybox
      command: ['sh','-c','echo Hi, Kube! && sleep 3600']
      readinessProbe:
         exec:
           command: ['sh','-c','echo Hi, Kube!']
         initialDelaySeconds: 5
         timeoutSeconds: 2
         periodSeconds: 15
