Hands-ons/readiness2.yml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-exec2

spec: 
  containers:
    - name: readiness
      image: mysql
      command: ['sh','-c','echo Hi, Kube! && sleep 3600']
      readinessProbe:
         exec:
           command: ['sh','-c','echo Hi, Kube!']
         initialDelaySeconds: 5
         timeoutSeconds: 2
         periodSeconds: 15
