Hands-ons/resource-pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: resource-pod
spec: 
  containers:
    - name: busybox
      image: busybox
      command: ['sh', "-c", "while true;do sleep 3600;done"]
      resources: 
        requests:
          cpu: "250m"
          memory: "128Mi"
        limits:
          cpu: "500m"
          memory: "256Mi"
