Hands-ons/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
spec:
  containers:
    - name: busy-box
      image: radial/busyboxplus:curl
      command: ['sh', "-c", "while true;do sleep 3600;done"]
