Hands-ons/web-svc-demo.yml
apiVersion: v1
kind: Service   
metadata:
  namespace: demo
  name: web-flask-svc
  labels:
    app: web-flask
spec:
  type: NodePort  
  ports:
  - port: 3000  # clusterIP servis portu
    targetPort: 8000 # container yayınını yakalamak için hedef 
  selector:
    env: front-end # label env: front-end olan podlar eşlenecek
    version: v1
