Hands-ons/webservice.yml
apiVersion: v1
kind: Service
metadata:
  name: shipping-svc
  labels: 
    app: shipping-svc
spec:
  selector:
    app: shipping-svc
  ports: 
  - port: 80
    targetPort: 80
